<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/title_text_size"
        android:layout_gravity="center"
        android:background="@drawable/user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/common_text_size"/>
        <EditText
            android:id="@+id/UserInfo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserInfo_phone"
            android:textSize="@dimen/common_text_size"/>
        <EditText
            android:id="@+id/UserInfo_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size"
            android:inputType="number"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/UserInfo_Relative_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pws"
                android:textSize="@dimen/common_text_size"/>
            <EditText
                android:id="@+id/UserInfo_pws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_size"
                android:maxLength="16"
                android:inputType="numberPassword"
                android:layout_toRightOf="@+id/UserInfo_Relative_text"/>
            <ImageView
                android:id="@+id/UserInfo_icon"
                android:layout_width="@dimen/title_text_size"
                android:layout_height="@dimen/title_text_size"
                android:src="@drawable/covered"
                android:scaleType="fitCenter"
                android:layout_alignRight="@+id/UserInfo_pws"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/UserInfo_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/UserInfo_modify"
        android:textSize="@dimen/common_text_size"/>

        <Button
            android:id="@+id/UserInfo_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/UserInfo_out"
            android:textSize="@dimen/common_text_size"/>

</LinearLayout>