<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

<!--    <RadioGroup-->
<!--        android:id="@+id/rb_gender"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        >-->

<!--        <RadioButton-->
<!--            android:checked="true"-->
<!--            android:id="@+id/rb_Login_pws"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/Login_pws"-->
<!--            android:textSize="20sp"/>-->

<!--        <RadioButton-->
<!--            android:id="@+id/rb_Login_mes"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/Login_mes"-->
<!--            android:textSize="20dp"/>-->
<!--    </RadioGroup>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edittext_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_norm"
            android:hint="输入账号"
            android:textSize="20dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/tv_pws"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pws"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edittext_pws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_norm"
            android:hint="@string/hint_text"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/ck_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="记住密码"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/login"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:background="@drawable/regeister"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>



    <Button
        android:id="@+id/btn_find_pws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="找回密码"
        android:gravity="center"
        />






</LinearLayout>
